Fix the weird jumping on Content List width toggle

--- a/wp-content/themes/passion-lms/css/main.css
+++ b/wp-content/themes/passion-lms/css/main.css
@@ -401,11 +401,20 @@ h3.truncate.card__title {
 .content-list-module-wrapper {
   background-color: #FAFAFA;
   position: relative;
+  height: 500px;
+  overflow: hidden;
+  -webkit-transition: all 300ms; /* Safari */
+  transition: all 300ms;
+}
+
+.content-list-module-wrapper.full-width {
+  height: 700px;
+  background-color: #F7F7F7;
+  overflow-y: scroll;
 }
 
 .content-list-wrapper {
   width: 32%;
-  height: 500px;
   float: left;
   padding: 5px;
   overflow-y: scroll;
@@ -424,9 +433,12 @@ h3.truncate.card__title {
   float: left;
   background-color: #F7F7F7;
   overflow-y: scroll;
-  position: relative;
-  -webkit-transition: width 300ms; /* Safari */
-  transition: width 300ms;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  -webkit-transition: all 300ms; /* Safari */
+  transition: all 300ms;
 }
 
 .button-footer .two-btns {
@@ -435,12 +447,20 @@ h3.truncate.card__title {
 
 .content-pane-wrapper.full-width {
   width: 100%;
-  height: auto;
+  height: 100%;
+  min-height: 626px;
+  overflow-y: scroll;
 }
 
 .content-list-wrapper.no-width {
-  width: 0px;
-  padding: 0px;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.tab-pane {
+  height: 100%;
+  overflow: scroll;
 }
 
 .fa-chevron-circle-left.switch-chevron:before {
@@ -569,11 +589,19 @@ div a:focus, div .btn:focus {
     position: absolute;
     top: 0;
     left: 0;
+    height: 100%;
+    background-color: #FFF;
     z-index: 1;
+    transition: all 300ms;
+  }
+  
+  .content-list-wrapper.no-width {
+    left: -100%;
   }
 
   div.content-pane-wrapper {
     width: 100%;
+    
   }
 
   .button-footer .two-btns {
